--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ matrix:
       env: WP_VERSION=latest PHP_LINT=1
     - php: 5.6
       env: WP_VERSION=nightly WP_PHPCS=1
+  allow_failures:
     - php: 'hhvm'
       env: WP_VERSION=nightly PHP_LINT=1
   fast_finish: true
