--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,14 @@ sudo: false
 
 language: php
 
+jdk:
+  - oraclejdk8
+
+addons:
+  apt:
+    packages:
+      - oracle-java8-installer
+
 notifications:
   email:
     on_success: never
@@ -11,22 +19,36 @@ branches:
   only:
     - master
 
+env:
+  global:
+    - JAVA_HOME=/usr/lib/jvm/java-8-oracle
+
 matrix:
   include:
     - php: 5.4
-      env: WP_VERSION=4.4.2 PHP_LINT=1
+      env: WP_VERSION=4.4.2 PHP_LINT=1 ES_VERSION=2.4.6
     - php: 5.6
-      env: WP_VERSION=latest PHP_LINT=1
+      env: WP_VERSION=latest PHP_LINT=1 ES_VERSION=5.6.1
     - php: 7.0
-      env: WP_VERSION=latest PHP_LINT=1
-    - php: 5.6
-      env: WP_VERSION=nightly WP_PHPCS=1
+      env: WP_VERSION=nightly WP_PHPCS=1 ES_VERSION=5.6.1
+    - php: 7.1
+      env: WP_VERSION=latest PHP_LINT=1 ES_VERSION=2.4.6
+    - php: 7.2
+      env: WP_VERSION=nightly PHP_LINT=1 ES_VERSION=6.0.0-beta2
   allow_failures:
-    - php: 'hhvm'
-      env: WP_VERSION=nightly PHP_LINT=1
-  fast_finish: true
+    - php: 7.2
+
+install:
+  - bash bin/install-es.sh $ES_VERSION
 
 before_script:
+  - export PATH="$HOME/.composer/vendor/bin:$PATH"
+  - |
+    if [[ ${TRAVIS_PHP_VERSION:0:2} == "7." ]]; then
+      composer global require "phpunit/phpunit=5.7.*"
+    else
+      composer global require "phpunit/phpunit=4.8.*"
+    fi
   - |
     if [[ ! -z "$WP_VERSION" ]] ; then
       bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
@@ -38,9 +60,14 @@ before_script:
       # After CodeSniffer install you should refresh your path.
       phpenv rehash
     fi
+  - curl localhost:9200 && echo "ES is up" || (cat /tmp/elasticsearch.log && exit 1)
+  - phpunit --version
 
 script:
   - if [[ "$PHP_LINT" == "1" ]]; then find . -type "f" -iname "*.php" | xargs -L "1" php -l; fi
   - if [[ "$WP_PHPCS" == "1" ]]; then phpcs -p -s -v -n --standard=./codesniffer.ruleset.xml --extensions=php .; fi
   - phpunit
   - phpunit -c multisite.xml
+
+after_script:
+  - cat /tmp/elasticsearch.log
